--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "nodejs-sandbox",
+  "name": "interview-tasks",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.html",
-  "scripts": {},
+  "description": "JS tasks for the interviews",
+  "main": "",
+  "scripts": {
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/codesandbox-app/static-template.git"
+    "url": "git+https://github.com/AndrewMasalski/interview-tasks.git"
   },
-  "keywords": [],
-  "author": "Ives van Hoorne",
-  "license": "MIT",
+  "author": "",
+  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/codesandbox-app/static-template/issues"
+    "url": "https://github.com/AndrewMasalski/interview-tasks/issues"
   },
-  "homepage": "https://github.com/codesandbox-app/static-template#readme",
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  },
-  "dependencies": {}
+  "homepage": "https://github.com/AndrewMasalski/interview-tasks#readme"
 }
